Added resulst page

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -92,3 +92,18 @@ body {
   justify-content: center;
   display: flex;
 }
+
+.result-question {
+  margin-bottom: 10px;
+  border: 1px solid #ddd;
+  padding: 10px;
+  font-size: 13px;
+}
+
+.correct-indicator {
+  color: green;
+}
+
+.incorrect-indicator {
+  color: red;
+}
