--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -93,17 +93,10 @@ body {
   display: flex;
 }
 
-.result-question {
+.question-Result-box {
   margin-bottom: 10px;
   border: 1px solid #ddd;
   padding: 10px;
   font-size: 13px;
 }
 
-.correct-indicator {
-  color: green;
-}
-
-.incorrect-indicator {
-  color: red;
-}
